nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud 
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
    # add target port
      targetPort: 80
  selector:
    app: nextcloud
